<resources>
    <string name="app_name">Capitals quiz2</string>
    <string name="welcome_text">welcome</string>
    <string name="input_name_hint">Input your name</string>
    <string name="start_text">start</string>
    <string name="error_required">Required!</string>
    <string name="text_submit">Submit</string>
    <string name="continue_text">Continue</string>
    <string name="question_counter">%d / %d</string>
    <string name="answer_right">%d / %d</string>
    <string name="Finish_text">Finish</string>
    <string name="finish_text">finish</string>
    <string name="result_text">Result</string>
    <string name="Congurlations">Sorawlarımızǵa juwap bergenińińiz ushın raxmet</string>
    <string name="exit_text">Shıǵıw</string>
    <string name="newgame_text">Jańa oyın</string>
</resources>