<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="#7D74AF"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="@dimen/margin_32"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/Right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/margin_32"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="SpUsage" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Congurlations"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="26sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/newgame"
        android:layout_width="match_parent"
        app:cornerRadius="@dimen/margin_32"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="20dp"
        android:text="@string/newgame_text"
        android:letterSpacing="0.2"
        android:textSize="@dimen/margin_16dp"
        tools:ignore="SpUsage" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/margin_32"
        android:text="@string/exit_text"
        android:letterSpacing="0.2"
        android:textSize="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="20dp"
        tools:ignore="SpUsage" />

</LinearLayout>